Fix mobile view

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <title>Easy Approval Voting</title>
   <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script
+  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
   <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
