--- a/index.html
+++ b/index.html
@@ -39,13 +39,31 @@
         votes: {},
         totals: {},
         votingDone: false,
+        addExtraChoice(choice, index) {
+          const choices = this.choices;
+          if (choices.every(c => c.name.length)) {
+            choices.push({name: ''})
+          }
+          const lastIndex = choices.length-1;
+          if (index !== lastIndex && choice.name === '' && choices[lastIndex].name === '') {
+            choices.pop();
+          }
+        },
+        addExtraPerson(person, index) {
+          const people = this.people;
+          if (people.every(p => p.name.length)) {
+            people.push({name: ''})
+          }
+          const lastIndex = people.length-1;
+          if (index !== lastIndex && person.name === '' && people[lastIndex].name === '') {
+            people.pop();
+          }
+        },
         selectNextButton() {
           this.$nextTick(() => document.querySelector('button').focus());
         },
         finishChoices() {
-          if (this.choices[this.choices.length-1].name === '') {
-            this.choices.pop();
-          }
+          this.choices = this.choices.filter(c => c.name != '');
           this.choicesDone = true;
           if (this.peopleDone) {
             this.selectNextButton();
@@ -99,11 +117,9 @@
         class="min-w-full divide-y divide-gray-300"
         x-trap="choicesDone && peopleDone && !votingDone"
         x-on:keydown.up="$focus.wrap().previous()"
-        x-on:keydown.down="$focus.wrap().next(); console.log($focus.wrap().getNext())"
-        x-on:keydown.left="$focus.wrap().previous()"
-        x-on:keydown.right="$focus.wrap().next()"
+        x-on:keydown.down="$focus.wrap().next()"
       >
-        <thead>
+        <thead class="text-lg">
           <tr>
             <th
               x-text="!choicesDone ? 'Enter Choices' : !peopleDone ? 'Enter People' : ''"
@@ -111,27 +127,23 @@
             >Enter Choices</th>
             <th x-show="votingDone"></th>
               <template x-for="(person, index) in people">
-                <th class="py-3.5 px-3 text-left font-semibold text-gray-900">
+                <th class="text-left font-semibold text-gray-900">
                   <template x-if="choicesDone && !peopleDone">
                     <input
                       x-model="person.name"
-                      x-on:input="
-                        if (people.every(p => p.name.length)) {
-                          people.push({name: ''})
-                        }
-                        const lastIndex = people.length-1;
-                        if (index !== lastIndex && person.name === '' && people[lastIndex].name === '') {
-                          people.pop();
-                        }
-                      "
+                      x-on:input="addExtraPerson(person, index)"
                       x-bind:tabindex="100 + index+1"
                       x-bind:placeholder="`Name ${index+1}`"
                       x-bind:id="`person-${index}`"
-                      x-init="if (index === 0) $nextTick(() => $el.focus());"
+                      x-init="
+                        if (index === 0 && people.length < 2) $nextTick(() => $el.focus());
+                        addExtraPerson(person, index);
+                      "
                       class="w-32"
                     >
                   </template>
                   <div
+                    class="py-3.5 px-3 cursor-pointer hover:bg-indigo-600 hover:text-white"
                     x-text="person.name"
                     x-show="peopleDone"
                     x-on:click="
@@ -160,7 +172,7 @@
                     <div>
                       <template x-if="!currentVoter">
                         <button
-                          type="submit"
+                          type="button"
                           x-on:click.prevent="startVoting(person)"
                           x-bind:disabled="!choicesDone || !peopleDone"
                           class="
@@ -218,32 +230,27 @@
           </template>
         </thead>
 
-        <tbody>
+        <tbody class="text-lg">
           <template x-for="(choice, index) in choices">
             <tr>
-            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+            <td class="whitespace-nowrap py-4 pl-4 pr-3 font-medium text-gray-900 sm:pl-0">
               <template x-if="!choicesDone">
                 <input
                   x-model="choice.name"
-                  x-on:input="
-                    if (choices.every(c => c.name.length)) {
-                      choices.push({name: ''})
-                    }
-                    const lastIndex = choices.length-1;
-                    if (index !== lastIndex && choice.name === '' && choices[lastIndex].name === '') {
-                      choices.pop();
-                    }
-                  "
+                  x-on:input="addExtraChoice(choice, index)"
                   x-bind:placeholder="`Option ${index+1}`"
                   x-show="!choicesDone"
-                  x-init="if (index === 0) $nextTick(() => $el.focus());"
+                  x-init="
+                    if (index === 0 && choices.length < 2) $nextTick(() => $el.focus());
+                    addExtraChoice(choice, index);
+                  "
                   x-bind:id="`choice-${index}`"
                 >
               </template>
               <div
                 x-text="choice.name"
                 x-show="choicesDone"
-                class="font-weight"
+                class="font-bold"
                 x-on:click="
                   resetVotes();
                   choicesDone = false;
@@ -254,7 +261,7 @@
             <td x-text="totals[choice.name]" x-show="votingDone"></td>
             <template x-if="choicesDone">
               <template x-for="person in people">
-                <td class="whitespace-nowrap py-1 px-3 text-sm text-gray-500">
+                <td class="whitespace-nowrap py-1 px-3 text-gray-500">
                   <template x-if="choicesDone && peopleDone && (isCurrentlyVoting(person) || hasVoted(person))">
                     <label
                       class="w-full h-full py-3"
@@ -292,25 +299,26 @@
           !choicesDone ? `That's all the choices` : `That's all the people`
         "
         x-on:click.prevent="
-          if (!choicesDone) {
+          if (!choicesDone && choices.some(c => c.name !== '')) {
             finishChoices();
-          } else {
+          } else if (people.some(p => p.name !== '')) {
             finishPeople();
           }
         "
         x-show="!choicesDone || !peopleDone"
         class="
-         rounded
-         bg-indigo-600
-         py-1
-         px-2
-         text-sm
-         font-semibold
-         text-white
-         shadow-sm
-         hover:bg-indigo-500
-         focus-visible:outline100
-       "
+          rounded
+          bg-indigo-600
+          py-1
+          px-2
+          text-lg
+          font-semibold
+          text-white
+          shadow-sm
+          hover:bg-indigo-500
+          focus-visible:outline100
+        "
+      >
       </button>
   </div>
 </body>
